lvl_6/web_ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adminer-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx

spec:
  # tls:
  # - hosts:
  #     - grafana.francearchives.fr
  #   secretName: grafana-cert-tls
  rules:
    - host: mywebapp.domain.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: adminer-service
                port:
                  number: 8080
